working (barely) auth
